<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="File Name"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="241dp" />

    <Button
        android:id="@+id/btElevator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_elevator"
        app:layout_constraintEnd_toStartOf="@+id/btStairs"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btBike"
        app:layout_constraintTop_toBottomOf="@+id/btRun" />

    <Button
        android:id="@+id/btCar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_car"
        app:layout_constraintEnd_toStartOf="@+id/btRun"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btLia" />

    <Button
        android:id="@+id/btBus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_bus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btTrain"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btTrain"
        app:layout_constraintTop_toBottomOf="@+id/btStairs" />

    <Button
        android:id="@+id/btStand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_stand"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btSit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btSit"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <Button
        android:id="@+id/btLia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_lia"
        app:layout_constraintEnd_toStartOf="@+id/btSit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <Button
        android:id="@+id/btEscalator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_escalator"
        app:layout_constraintEnd_toStartOf="@+id/btTrain"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btBike" />

    <Button
        android:id="@+id/btBike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_bike"
        app:layout_constraintEnd_toStartOf="@+id/btElevator"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btCar" />

    <Button
        android:id="@+id/btWalk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_walk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btRun"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btRun"
        app:layout_constraintTop_toBottomOf="@+id/btStand" />

    <Button
        android:id="@+id/btRun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_run"
        app:layout_constraintEnd_toStartOf="@+id/btWalk"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btCar"
        app:layout_constraintTop_toBottomOf="@+id/btSit" />

    <Button
        android:id="@+id/btTrain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_train"
        app:layout_constraintEnd_toStartOf="@+id/btBus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btEscalator"
        app:layout_constraintTop_toBottomOf="@+id/btElevator" />

    <Button
        android:id="@+id/btSit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_sit"
        app:layout_constraintEnd_toStartOf="@+id/btStand"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btLia"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <Button
        android:id="@+id/btStairs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_stairs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btElevator"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btElevator"
        app:layout_constraintTop_toBottomOf="@+id/btWalk" />

    <Button
        android:id="@+id/btStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_start"
        app:layout_constraintEnd_toStartOf="@+id/btStop"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <Button
        android:id="@+id/btStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_stop"
        app:layout_constraintEnd_toStartOf="@+id/btExport"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btStart"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <Button
        android:id="@+id/btExport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_export"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btStop"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btStop"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="496dp" />

</androidx.constraintlayout.widget.ConstraintLayout>